--- a/aboutus.html
+++ b/aboutus.html
@@ -114,11 +114,11 @@
 
 		<section class="p-5" id="mission">
 			<h2 class="mb-5 about-tags animated slideInLeft">Our Mission</h2>
-			<p class="text-justify">We strive to create memorable, beautiful, fun games that engage and delight gamers worldwide. We hope that our games capture the imaginations of experienced gamers and new gamers alike. </p>
+			<p class="text-justify" style="font-weight: 900">We strive to create memorable, beautiful, fun games that engage and delight gamers worldwide. We hope that our games capture the imaginations of experienced gamers and new gamers alike. </p>
 		</section>
 		<section class="p-5" id="vision" style="background-image: url('./assets/img/13203-2.png')">
 		<h2 class="mb-5 about-tags text-right animated slideInRight">Our Vision</h2>
-			<p class="lead text-justify">We seek to add value to our fellow creators and backers in a way that extends beyond board games by sharing our crowdfunding and entrepreneurial successes, mistakes, and insights.</p>
+			<p class="lead text-justify" style="font-weight: 900">We seek to add value to our fellow creators and backers in a way that extends beyond board games by sharing our crowdfunding and entrepreneurial successes, mistakes, and insights.</p>
 
 			<p class="lead text-justify">
 				<ul>
