--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,10 @@
   	integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   	crossorigin="anonymous"></script>
 
+    <script src="assets/js/lightbox.min.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/lightbox.css">
+
   	<!-- Popper -->
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
@@ -78,7 +82,7 @@
       <div class="row text-center text-lg-left">
 
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
+          <a data-title="Unfair Mario" data-lightbox="gallery" href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="assets/img/unfairmario.jpg" alt=""> <br> <p>Unfair Mario</p>
           </a>
         </div>
