--- a/landingpage.html
+++ b/landingpage.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-	<section class="jumbotronlanding mb-0 h-50 header" id="about-jumbotron"
+	<section class="jumbotronlanding mb-0 h-50 header container-fluid" id="about-jumbotron"
 	style="background-image: url('./assets/img/aasdf.jpg')">
 		<h1 class="text-center animated slideInLeft" id="about-landing">
 			 Half-Full
@@ -50,10 +50,12 @@
 		<br>
 		<h2 class="text-center text-white">Games</h2>
 		 <!-- Landing page enter button -->
-  <section>
-  	<p><a href="./homepage.html"><button type="button" class="btn btnlanding btn-outline-success btn-rounded waves-effect">Enter</button></a>
+  <div>
+  	<p> <button class="container-fluid btn-outline-success btn-rounded waves-effect" type="button"><a href="./homepage.html">Enter
+      </button>
+    </a>
 </p>
-  </section>
+  </div>
 
     <!-- End of landing page enter button -->
 
