--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,11 @@
     
   </head>
 
-  <body style="background-image: url('assets/img/13203-2 (1).png')">
+  <body class="container-fluid" style="background-image: url('assets/img/13203-2 (1).png')">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark fixed-top ">
+      <div class="container-fluid">
         <a class="navbar-brand" href="./homepage.html">Half-Full Games</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
