--- a/homepage.html
+++ b/homepage.html
@@ -132,7 +132,7 @@
               <p class="card-text">Video streaming platform Twitch has suddenly hit a wall in China, as the Twitch website is currently inaccessible in the country & the 	app has been removed from Apple's regional App Store.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Read more...</a>
+              <a href="http://the-technology-news.online/access/the-gaming-stream-dries-up-in-china-as-government-cuts-access-to-twitch/" class="btn btn-primary">Read more...</a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
               <p class="card-text">Blizzard has warned users that further use of third-party data tracking applications for Overwatch will lead to bans on their accounts.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Read More...</a>
+              <a href="https://www.gamasutra.com/view/news/327014/Blizzard_cracks_down_on_thirdparty_datatracking_apps_in_Overwatch.php" class="btn btn-primary">Read More...</a>
             </div>
           </div>
         </div>
@@ -156,7 +156,7 @@
               <p class="card-text">Japan’s Consumer Entertainment Supplier’s Association has shared the winners of its 2018 Japan Game Awards, held this year at the Tokyo Game Show.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Read More...</a>
+              <a href="https://www.gamasutra.com/view/news/327000/Monster_Hunter_World_grabs_top_prize_at_Japan_Game_Awards_2018.php" class="btn btn-primary">Read More...</a>
             </div>
           </div>
         </div>
