--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,13 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	
+	<!-- Old background removed style="background-image: url('assets/img/13203-2 (1).png' -->
 
     
   </head>
 
-  <body class="container-fluid" style="background-image: url('assets/img/13203-2 (1).png')">
+  <body class="container-fluid" style="background-image: url('assets/img/clouds-female-game-123335.jpg')">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark  fixed-top container-fluid">
