--- a/gallery.html
+++ b/gallery.html
@@ -107,7 +107,7 @@
         <div class="col-lg-3 col-md-4 col-xs-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="assets/img/ffxv1-e1518641264528.png" alt="">
-            <br> <p>FFXV% V.1</p>
+            <br> <p>FFXV V.1</p>
           </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6">
